--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Personal page of Sławomir Piwowarski - scrum master, agile coach, business and systems analyst, back-end and front-end developer. IT professional with many years of experience designing and delivering IT solutions across industries such as banking and financial services, e-commerce, logistics, automotive, manufacturing, and local government. Currently, I am passionately developing my skills in the field of ML/AI, aiming to create innovative and valuable solutions in this area."
+    />
+    <meta
+      name="keywords"
+      content="ML/AI, python, scikit-learn, tensorflow, pytorch, ann, cnn, rnn, java, HTML, CSS, Java Script, react, DevOps, MLOps, agile, scrum, kanban, Quality Assurance, business analysis, system analysis, data analysis"
+    />
+    <meta name="author" content="Sławomir Piwowarski" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://webiwo.pl" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+
     <title>webiwo | sławomir piwowarski</title>
   </head>
   <body>
